--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "dompurify": "^3.2.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "jsdom": "^25.0.1",
     "marked": "^15.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.8.2",
